Changed the banner

--- a/main.html
+++ b/main.html
@@ -7,8 +7,21 @@
 </head>
 
 <body>
-  <div class="main-header-div">
-    <h1 class="main-header"> Gimme </h1>
+  <div class="banner-div">
+
+    <div class="main-header">
+      <h1> Gimme </h1>
+    </div>
+
+    <div class="main-nav-bar-div">
+      <ul class="nav-bar-menu">
+        <li class="nav-li"> <a href="#Home"> Home </a> </li>
+        <li class="nav-li"> <a href="#Contribute"> Contribute </a> </li>
+        <li class="nav-li"> <a href="#Help"> Help </a> </li>
+      </ul>
+    </div>
+
   </div>
+
 </body>
 </html>
