--- a/main.html
+++ b/main.html
@@ -7,21 +7,17 @@
 </head>
 
 <body>
-  <div class="banner-div">
-
-    <div class="main-header">
-      <h1> Gimme </h1>
-    </div>
-
-    <div class="main-nav-bar-div">
-      <ul class="nav-bar-menu">
-        <li class="nav-li"> <a href="#Home"> Home </a> </li>
-        <li class="nav-li"> <a href="#Contribute"> Contribute </a> </li>
-        <li class="nav-li"> <a href="#Help"> Help </a> </li>
-      </ul>
-    </div>
-
-  </div>
-
+	<div class="banner-div">
+    	<div class="main-header">
+      		<h1> Gimme </h1>
+   		</div>
+        <div class="main-nav-bar-div">
+    <ul class="nav-bar-menu">
+       <li class="Home">  Home  </li>
+       <li class="Contribute">  Contribute </li>
+       <li class="Help"> Help </li>
+    </ul>
+   </div>
+	</div>
 </body>
 </html>
