made the UI look better

--- a/main.html
+++ b/main.html
@@ -18,13 +18,20 @@
    		</div>
       <div class="main-nav-bar-div">
         <ul class="nav-bar-menu">
-          <li class="Home">  Home  </li>
+          <li class="Home">  Login  </li>
           <li class="Contribute">  <a class="menu-ref" href="https://github.com/eagleclawsan/gimme-json">Contribute</a> </li>
           <li class="Help"> Help </li>
         </ul>
       </div>
 	</div>
-
+<div class="text_container">
+	<div class="text">
+    	Welcome
+    </div>
+    <div class="more_text">
+    	Please enter your API request into the URL below!
+    </div>
+</div>
   <div class="ui huge action input" id="api-call-input">
       <input class="request-input" type="text" placeholder="URL...">
       <button class="ui primary button send-button"> Send </button>
