--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="assets/semantic/dist/semantic.min.css">
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="assets/crypto-js/crypto-js.js"></script>
+
   <script src="assets/semantic/dist/semantic.min.js"></script>
   <script src="assets/src/ace.js" type="text/javascript" charset="utf-8"></script>
 
@@ -29,7 +31,7 @@
     	Welcome
     </div>
     <div class="more_text">
-    	Please enter your API request into the URL below!
+    	Please enter your API endpoint below!
     </div>
 </div>
   <div class="ui huge action input" id="api-call-input">
@@ -41,12 +43,14 @@
     <div id="param-pane">
       <table class="ui celled striped table" id="param-table">
         <thead>
-          <tr><th colspan="3">
-            <p id="table-title"> Parameters </p>
-            <button class="ui primary button" id="add-button" style="float: right;"> + </button>
-            <button class="ui primary button" id="reset-button" style="float: right;"> clear </button>
-          </th>
-        </tr></thead>
+          <tr>
+            <th colspan="3">
+              <p id="table-title"> Parameters </p>
+              <button class="ui primary button" id="add-button" style="float: right;"> + </button>
+              <button class="ui primary button" id="reset-button" style="float: right;"> clear </button>
+            </th>
+          </tr>
+        </thead>
         <tbody>
           <tr>
             <td class="table-cell">
