--- a/main.html
+++ b/main.html
@@ -80,5 +80,6 @@
     editor.getSession().setMode("ace/mode/javascript");
   </script>
   <script src="assets/requestHandler.js"></script>
+  <script src="assets/inputHandler.js"></script>
 </body>
 </html>
