--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <head>
   <title> Gimme </title>
 
-  <link rel="stylesheet" type="text/css" href="assets/main.css">
+  <link rel="stylesheet" type="text/css" href="assets/index.css">
   <link rel="stylesheet" type="text/css" href="assets/semantic/dist/semantic.min.css">
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="assets/crypto-js/crypto-js.js"></script>
 
   <script src="assets/semantic/dist/semantic.min.js"></script>
   <script src="assets/src/ace.js" type="text/javascript" charset="utf-8"></script>
